--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
 name: ftpconnect
-description: A simple and robust dart FTP Client Library to interact with FTP Servers with possibility of zip and unzip files.
+description: Flutter simple and robust dart FTP Connect Library to interact with FTP Servers with possibility of zip and unzip files.
 version: 0.0.1
 author: SalimDev <salimlachdef@gmail.com>
 homepage: https://github.com/salim-lachdhaf
