--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,8 +1,6 @@
 name: ftpconnect
 description: Flutter simple and robust dart FTP Connect Library to interact with FTP Servers with possibility of zip and unzip files.
 version: 0.1.5
-authors:
-  - SalimDev <salimlachdef@gmail.com>
 homepage: https://github.com/salim-lachdhaf
 git: https://github.com/salim-lachdhaf/ftpConnect
 repository: https://github.com/salim-lachdhaf/ftpConnect
@@ -12,6 +10,7 @@ environment:
 
 dependencies:
   archive: ^2.0.13
+  path: ^1.6.4
   flutter:
     sdk: flutter
 
