--- a/.github/workflows/dart.yml
+++ b/.github/workflows/dart.yml
@@ -7,18 +7,12 @@ on:
     branches: [ master ]
 
 jobs:
-  build:
-    runs-on: ${{ matrix.operating-system }}
+  test:
+    name: Test on ${{ matrix.os }}
+    runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        operating-system: [ubuntu-latest, windows-latest, macos-latest]
-
-    # Note that this workflow uses the latest stable version of the Dart SDK.
-    # Docker images for other release channels - like dev and beta - are also
-    # available. See https://hub.docker.com/r/google/dart/ for the available
-    # images.
-    container:
-      image:  google/dart:latest
+        os: [ubuntu-latest, windows-latest, macos-latest]
     steps:
       - name: Flutter action
         uses: subosito/flutter-action@v1.4.0
