--- a/.github/workflows/dart.yml
+++ b/.github/workflows/dart.yml
@@ -16,10 +16,10 @@ jobs:
       - uses: actions/checkout@v2
       - uses: actions/setup-java@v1
         with:
-          java-version: '12.x'
+          java-version: '29.0.3'
       - uses: subosito/flutter-action@v1
         with:
-          flutter-version: '1.22.1'
+          flutter-version: '1.22.4'
       - run: flutter pub get
       - run: flutter test
       - run: flutter build apk
