--- a/.github/workflows/dart.yml
+++ b/.github/workflows/dart.yml
@@ -16,7 +16,7 @@ jobs:
       - uses: actions/checkout@v2
       - uses: actions/setup-java@v1
         with:
-          java-version: '29.0.3'
+          java-version: '12.x'
       - uses: subosito/flutter-action@v1
         with:
           flutter-version: '1.22.4'
