--- a/.github/workflows/dart.yml
+++ b/.github/workflows/dart.yml
@@ -8,7 +8,7 @@ on:
 
 jobs:
   build:
-   # runs-on: macos-latest
+    runs-on: windows-latest
     steps:
       - name: Flutter action
         uses: subosito/flutter-action@v1.4.0
