--- a/.github/workflows/dart.yml
+++ b/.github/workflows/dart.yml
@@ -21,7 +21,15 @@ jobs:
         with:
           flutter-version: '1.22.4'
       - run: flutter pub get
+      - run: flutter format --set-exit-if-changed
+      - run: flutter analyze
       - run: flutter test
       - run: flutter build apk
       - run: flutter build appbundle
       - run: flutter build ios --release --no-codesign
+
+      # Upload generated apk to the artifacts.
+      - uses: actions/upload-artifact@v1
+        with:
+          name: release-apk
+          path: build/app/outputs/apk/release/app-release.apk
