--- a/.github/workflows/dart.yml
+++ b/.github/workflows/dart.yml
@@ -38,7 +38,7 @@ jobs:
       - run: flutter test
       - run: flutter build apk
       - run: flutter build appbundle
-      - run: flutter build ios --release --no-codesign
+      #- run: flutter build ios --release --no-codesign
 
       # Upload generated apk to the artifacts.
       - uses: actions/upload-artifact@v1
