--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,3 +19,9 @@ dev_dependencies:
     sdk: flutter
 
 flutter:
+  plugin:
+    platforms:
+      android:
+        pluginClass: ftpConnect
+      ios:
+        pluginClass: ftpConnect
