--- a/.github/workflows/dart.yml
+++ b/.github/workflows/dart.yml
@@ -36,8 +36,8 @@ jobs:
       # run  flutter widgets tests  and unit tests
       - run: flutter test --coverage
       - run: flutter test
-      - run: flutter build apk --target=lib/ftpConnect.dart
-      - run: flutter build appbundle --target=lib/ftpConnect.dart
+      - run: flutter build apk --target=lib/ftpconnect.dart
+      - run: flutter build appbundle --target=lib/ftpconnect.dart
       #- run: flutter build ios --release --no-codesign
 
       # Upload generated apk to the artifacts.
