--- a/.github/workflows/dart.yml
+++ b/.github/workflows/dart.yml
@@ -36,7 +36,7 @@ jobs:
       # run  flutter widgets tests  and unit tests
       - run: flutter test --coverage
       - run: flutter test
-      - run: flutter build apk --release --split-per-abi --target=lib/ftpconnect.dart
+      - run: flutter build apk --debug --split-per-abi --target=lib/ftpconnect.dart
       - run: flutter build appbundle --target=lib/ftpconnect.dart
       #- run: flutter build ios --release --no-codesign
 
