--- a/.github/workflows/dart.yml
+++ b/.github/workflows/dart.yml
@@ -21,7 +21,7 @@ jobs:
         with:
           flutter-version: '1.22.4'
       - run: flutter pub get
-      #- run: flutter format --set-exit-if-changed
+      - run: flutter format --dry-run --set-exit-if-changed
       - run: flutter analyze
 
       - run: flutter test --coverage
@@ -36,12 +36,21 @@ jobs:
       # run  flutter widgets tests  and unit tests
       - run: flutter test --coverage
       - run: flutter test
-      - run: flutter build apk --debug --split-per-abi --target=lib/ftpconnect.dart
-      - run: flutter build appbundle --target=lib/ftpconnect.dart
-      #- run: flutter build ios --release --no-codesign
+      - run: flutter build apk --debug --split-per-abi --target=example
+      - run: flutter build appbundle --target=example
 
-      # Upload generated apk to the artifacts.
-      - uses: actions/upload-artifact@v1
-        with:
-          name: release-apk
-          path: build/app/outputs/apk/release/app-release.apk
+      # This action will create a github release and optionally upload an artifact to it.
+      # https://github.com/ncipollo/release-action
+      #- name: Create a Release APK
+      #  uses: ncipollo/release-action@v1
+      #  with:
+      #    artifacts: "build/app/outputs/apk/debug/*.apk"
+      #    token: ${{ secrets.GH_TOKEN }}
+#
+      ##- run: flutter build ios --release --no-codesign
+#
+      ## Upload generated apk to the artifacts.
+      #- uses: actions/upload-artifact@v1
+      #  with:
+      #    name: release-apk
+      #    path: build/app/outputs/apk/release/app-release.apk
