--- a/.github/workflows/dart.yml
+++ b/.github/workflows/dart.yml
@@ -21,7 +21,7 @@ jobs:
         with:
           flutter-version: '1.22.4'
       - run: flutter pub get
-      - run: flutter format --dry-run --set-exit-if-changed
+      - run: flutter format --dry-run --set-exit-if-changed .
       - run: flutter analyze
 
       - run: flutter test --coverage
@@ -36,7 +36,7 @@ jobs:
       # run  flutter widgets tests  and unit tests
       - run: flutter test --coverage
       - run: flutter test
-      - run: flutter build apk --debug --split-per-abi --target=example
+      - run: flutter build apk --release --split-per-abi --target=example
       - run: flutter build appbundle --target=example
 
       # This action will create a github release and optionally upload an artifact to it.
