--- a/.github/workflows/ftpConnect.yml
+++ b/.github/workflows/ftpConnect.yml
@@ -2,9 +2,9 @@ name: build
 
 on:
   push:
-    branches: [ master ]
+    branches: [ master, dev ]
   pull_request:
-    branches: [ master ]
+    branches: [ master, dev ]
 
 jobs:
   build:
@@ -24,19 +24,19 @@ jobs:
       - run: flutter format --dry-run --set-exit-if-changed .
       - run: flutter analyze
 
+      # run  flutter widgets tests  and unit tests
       - run: flutter test --coverage
           # Upload coverage reports to Codecov
-          # https://github.com/marketplace/actions/codecov
+        # https://github.com/marketplace/actions/codecov
       - name: Upload coverage to Codecov
         uses: codecov/codecov-action@v1
         with:
           token: ${{ secrets.CODECOV_TOKEN }}
           file: coverage/lcov.info
 
-      # run  flutter widgets tests  and unit tests
-      #- run: flutter test
-     # - run: flutter build apk --release --split-per-abi --target=example/lib/main.dart
-      #- run: flutter build appbundle --target=example/lib/main.dart
+      - run: pushd example
+      - run: flutter build apk --release --split-per-abi
+      - run: flutter build appbundle
 
       # This action will create a github release and optionally upload an artifact to it.
       # https://github.com/ncipollo/release-action
@@ -45,7 +45,7 @@ jobs:
       #  with:
       #    artifacts: "build/app/outputs/apk/debug/*.apk"
       #    token: ${{ secrets.GH_TOKEN }}
-#
+      #
       ##- run: flutter build ios --release --no-codesign
 #
       ## Upload generated apk to the artifacts.
