--- a/.github/workflows/ftpConnect.yml
+++ b/.github/workflows/ftpConnect.yml
@@ -35,7 +35,7 @@ jobs:
           file: coverage/lcov.info
 
       - run: pushd example
-      - run: flutter build apk --release --split-per-abi
+      - run: pushd example && flutter build apk --release --split-per-abi
       - run: flutter build appbundle
 
       # This action will create a github release and optionally upload an artifact to it.
