--- a/.github/workflows/ftpConnect.yml
+++ b/.github/workflows/ftpConnect.yml
@@ -26,7 +26,7 @@ jobs:
 
       # run  flutter widgets tests  and unit tests
       - run: flutter test --coverage
-          # Upload coverage reports to Codecov
+        # Upload coverage reports to Codecov
         # https://github.com/marketplace/actions/codecov
       - name: Upload coverage to Codecov
         uses: codecov/codecov-action@v1
@@ -34,6 +34,8 @@ jobs:
           token: ${{ secrets.CODECOV_TOKEN }}
           file: coverage/lcov.info
 
+      - name: Install ndk
+        run: sdkmanager 'ndk;20.0.5594570'
       - run: pushd example && flutter build apk --release --split-per-abi
       - run: pushd example && flutter build appbundle
 
