--- a/.github/workflows/ftpConnect.yml
+++ b/.github/workflows/ftpConnect.yml
@@ -8,7 +8,7 @@ on:
 
 jobs:
   build:
-    runs-on: ubuntu-latest
+    runs-on: macos-latest
     steps:
       - name: Flutter action
         uses: subosito/flutter-action@v1.4.0
@@ -34,8 +34,6 @@ jobs:
           token: ${{ secrets.CODECOV_TOKEN }}
           file: coverage/lcov.info
 
-      - name: Install ndk
-        run: sdkmanager 'ndk;20.0.5594570'
       - run: pushd example && flutter build apk --release --split-per-abi
       - run: pushd example && flutter build appbundle
 
