--- a/.github/workflows/ftpConnect.yml
+++ b/.github/workflows/ftpConnect.yml
@@ -8,31 +8,33 @@ on:
 
 jobs:
   build:
-    runs-on: windows-latest
+    runs-on: ubuntu-latest
     steps:
       - name: Flutter action
         uses: subosito/flutter-action@v1.4.0
 
       - uses: actions/checkout@v2
-      - uses: actions/setup-java@v1
-        with:
-          java-version: '12.x'
+
+      - name: set up JDK 1.8
+          uses: actions/setup-java@v1
+          with:
+            java-version: 1.8
       - uses: subosito/flutter-action@v1
         with:
           flutter-version: '1.22.4'
       - run: flutter pub get
-      #- run: flutter format --dry-run --set-exit-if-changed .
-      #- run: flutter analyze
+      - run: flutter format --dry-run --set-exit-if-changed .
+      - run: flutter analyze
 
-      # run  flutter widgets tests  and unit tests
-      #- run: flutter test --coverage
+        # run  flutter widgets tests  and unit tests
+      - run: flutter test --coverage
         # Upload coverage reports to Codecov
         # https://github.com/marketplace/actions/codecov
-      #- name: Upload coverage to Codecov
-        #uses: codecov/codecov-action@v1
-        #with:
-         # token: ${{ secrets.CODECOV_TOKEN }}
-          #file: coverage/lcov.info
+      - name: Upload coverage to Codecov
+          uses: codecov/codecov-action@v1
+          with:
+            token: ${{ secrets.CODECOV_TOKEN }}
+            file: coverage/lcov.info
 
       - run: pushd example && flutter build apk --release --split-per-abi
       - run: pushd example && flutter build appbundle
@@ -46,7 +48,7 @@ jobs:
       #    token: ${{ secrets.GH_TOKEN }}
       #
       ##- run: flutter build ios --release --no-codesign
-#
+      #
       ## Upload generated apk to the artifacts.
       #- uses: actions/upload-artifact@v1
       #  with:
