--- a/.github/workflows/ftpConnect.yml
+++ b/.github/workflows/ftpConnect.yml
@@ -49,7 +49,7 @@ jobs:
         uses: ncipollo/release-action@v1
         with:
           artifacts: "build/app/outputs/apk/release/*.apk,build/app/outputs/bundle/release/app-release.aab"
-          tag: "master"
+          tag: "modify workFlow"
           token: ${{ secrets.GH_TOKEN }}
       #
       ##- run: flutter build ios --release --no-codesign
