--- a/.github/workflows/ftpConnect.yml
+++ b/.github/workflows/ftpConnect.yml
@@ -7,30 +7,24 @@ on:
     branches: [ master, dev ]
 
 jobs:
-  build:
+  test:
     runs-on: ubuntu-latest
+    name: test and send to codeCov
     steps:
-      - name: Flutter action
-        uses: subosito/flutter-action@v1.4.0
-
+      # The branch or tag ref that triggered the workflow will be checked out.
+      # https://github.com/actions/checkout
       - uses: actions/checkout@v2
 
-      - name: set up JDK 1.8
-        uses: actions/setup-java@v1
-        with:
-          java-version: 1.8
-
-      - name: Install NDK
-        run: echo "y" | sudo ${ANDROID_HOME}/tools/bin/sdkmanager --install "ndk;20.0.5594570" --sdk_root=${ANDROID_SDK_ROOT}
-
+      # Setup a flutter environment.
+      # https://github.com/marketplace/actions/flutter-action
       - uses: subosito/flutter-action@v1
-        with:
-          flutter-version: '1.22.4'
+          with:
+            flutter-version: '1.22.4'
+
       - run: flutter pub get
       - run: flutter format --dry-run --set-exit-if-changed .
       - run: flutter analyze
-
-        # run  flutter widgets tests  and unit tests
+      # run  flutter widgets tests  and unit tests
       - run: flutter test --coverage
         # Upload coverage reports to Codecov
         # https://github.com/marketplace/actions/codecov
@@ -39,6 +33,23 @@ jobs:
         with:
           token: ${{ secrets.CODECOV_TOKEN }}
           file: coverage/lcov.info
+
+  build_deploy:
+    runs-on: ubuntu-latest
+    name: build apks and deploy
+
+      - uses: actions/checkout@v2
+      - uses: subosito/flutter-action@v1
+          with:
+            flutter-version: '1.22.4'
+
+      - name: set up JDK 1.8
+        uses: actions/setup-java@v1
+        with:
+          java-version: 1.8
+
+      - name: Install NDK
+        run: echo "y" | sudo ${ANDROID_HOME}/tools/bin/sdkmanager --install "ndk;20.0.5594570" --sdk_root=${ANDROID_SDK_ROOT}
 
       - run: pushd example && flutter build apk --release --split-per-abi
       - run: pushd example && flutter build appbundle
@@ -51,11 +62,11 @@ jobs:
           artifacts: "build/app/outputs/apk/release/*.apk,build/app/outputs/bundle/release/app-release.aab"
           tag: "modify workFlow"
           token: ${{ secrets.GH_TOKEN }}
-      #
-      ##- run: flutter build ios --release --no-codesign
-      #
-      ## Upload generated apk to the artifacts.
-      #- uses: actions/upload-artifact@v1
-      #  with:
-      #    name: release-apk
-      #    path: build/app/outputs/apk/release/app-release.apk
+        #
+        ##- run: flutter build ios --release --no-codesign
+        #
+        ## Upload generated apk to the artifacts.
+        #- uses: actions/upload-artifact@v1
+        #  with:
+        #    name: release-apk
+        #    path: build/app/outputs/apk/release/app-release.apk
