--- a/.github/workflows/ftpConnect.yml
+++ b/.github/workflows/ftpConnect.yml
@@ -37,7 +37,7 @@ jobs:
   build_deploy:
     runs-on: ubuntu-latest
     name: build apks and deploy
-
+    steps:
       - uses: actions/checkout@v2
       - uses: subosito/flutter-action@v1
           with:
