--- a/.github/workflows/ftpConnect.yml
+++ b/.github/workflows/ftpConnect.yml
@@ -60,7 +60,8 @@ jobs:
         uses: ncipollo/release-action@v1
         with:
           artifacts: "build/app/outputs/apk/release/*.apk,build/app/outputs/bundle/release/app-release.aab"
-          tag: "modify workFlow"
+          tag_name: ${{ github.ref }}
+          release_name: Release ${{ github.ref }}
           token: ${{ secrets.GH_TOKEN }}
         #
         ##- run: flutter build ios --release --no-codesign
