--- a/.github/workflows/ftpConnect.yml
+++ b/.github/workflows/ftpConnect.yml
@@ -3,6 +3,8 @@ name: build
 on:
   push:
     branches: [ master, dev ]
+    tags:
+    - '*'
   pull_request:
     branches: [ master, dev ]
 
@@ -61,7 +63,7 @@ jobs:
         with:
           artifacts: "build/app/outputs/apk/release/*.apk,build/app/outputs/bundle/release/app-release.aab"
           tag: ${{ github.ref }}
-          release_name: Release ${{ github.ref }}
+          omitName: Release ${{ github.ref }}
           commit: ${{ github.sha }}
           token: ${{ secrets.GH_TOKEN }}
         #
