--- a/.github/workflows/ftpConnect.yml
+++ b/.github/workflows/ftpConnect.yml
@@ -58,10 +58,12 @@ jobs:
 
       # This action will create a github release and optionally upload an artifact to it.
       # https://github.com/ncipollo/release-action
+      - name: Tagname
+        run: echo "DATE=$(date +%y%m%d)" >> $GITHUB_ENV
       - name: Create a Release APK
         uses: ncipollo/release-action@v1.7.3
         with:
-          tag: Test
+          tag: day${{ env.DATE }}
           artifacts: "build/app/outputs/apk/release/*.apk,build/app/outputs/bundle/release/app-release.aab"
           omitName: Release ${{ github.ref }}
           token: ${{ secrets.GH_TOKEN }}
