--- a/.github/workflows/ftpConnect.yml
+++ b/.github/workflows/ftpConnect.yml
@@ -63,6 +63,7 @@ jobs:
       - name: Create a Release APK
         uses: ncipollo/release-action@v1.7.3
         with:
+          tag: v.test
           artifacts: "build/app/outputs/apk/release/*.apk,build/app/outputs/bundle/release/app-release.aab"
           omitName: Release ${{ github.ref }}
           token: ${{ secrets.GH_TOKEN }}
