--- a/.github/workflows/ftpConnect.yml
+++ b/.github/workflows/ftpConnect.yml
@@ -50,16 +50,14 @@ jobs:
         with:
           java-version: 1.8
 
-      - name: Install NDK
-        run: echo "y" | sudo ${ANDROID_HOME}/tools/bin/sdkmanager --install "ndk;20.0.5594570" --sdk_root=${ANDROID_SDK_ROOT}
+     # - name: Install NDK
+     #   run: echo "y" | sudo ${ANDROID_HOME}/tools/bin/sdkmanager --install "ndk;20.0.5594570" --sdk_root=${ANDROID_SDK_ROOT}
 
       - run: pushd example && flutter build apk --release --split-per-abi
       - run: pushd example && flutter build appbundle
 
       # This action will create a github release and optionally upload an artifact to it.
       # https://github.com/ncipollo/release-action
-      - name: Echo GITHUB_REF
-        run: echo ${{ secrets.GH_TOKEN }}
       - name: Create a Release APK
         uses: ncipollo/release-action@v1.7.3
         with:
