--- a/.github/workflows/ftpConnect.yml
+++ b/.github/workflows/ftpConnect.yml
@@ -50,8 +50,8 @@ jobs:
         with:
           java-version: 1.8
 
-     # - name: Install NDK
-     #   run: echo "y" | sudo ${ANDROID_HOME}/tools/bin/sdkmanager --install "ndk;20.0.5594570" --sdk_root=${ANDROID_SDK_ROOT}
+      - name: Install NDK
+        run: echo "y" | sudo ${ANDROID_HOME}/tools/bin/sdkmanager --install "ndk;20.0.5594570" --sdk_root=${ANDROID_SDK_ROOT}
 
       - run: pushd example && flutter build apk --release --split-per-abi
       - run: pushd example && flutter build appbundle
@@ -64,6 +64,8 @@ jobs:
           tag: v.test
           artifacts: "build/app/outputs/apk/release/*.apk,build/app/outputs/bundle/release/app-release.aab"
           omitName: Release ${{ github.ref }}
+          commit: ${{ github.sha }}
+          prerelease: true
           token: ${{ secrets.GH_TOKEN }}
         #
         ##- run: flutter build ios --release --no-codesign
