--- a/.github/workflows/ftpConnect.yml
+++ b/.github/workflows/ftpConnect.yml
@@ -71,10 +71,10 @@ jobs:
         #- run: flutter build ios --release --no-codesign
         #
         # Upload generated apk to the artifacts
-        - uses: actions/upload-artifact@v2
-          with:
-            name: release-apk
-            path: |
-                  build/app/outputs/apk/release/*.apk
-                  build/app/outputs/bundle/release/*.aab"
+        uses: actions/upload-artifact@v2
+        with:
+          name: release-apk
+          path: |
+                build/app/outputs/apk/release/*.apk
+                build/app/outputs/bundle/release/*.aab"
         
