--- a/.github/workflows/ftpConnect.yml
+++ b/.github/workflows/ftpConnect.yml
@@ -62,19 +62,17 @@ jobs:
         uses: ncipollo/release-action@v1.7.3
         with:
           tag: v.test
-          artifacts: "build/app/outputs/apk/release/*.apk,build/app/outputs/bundle/release/app-release.aab"
-          omitName: Release ${{ github.ref }}
+          artifacts: "build/app/outputs/apk/release/*.apk,build/app/outputs/bundle/release/*.aab"
           commit: ${{ github.sha }}
-          prerelease: true
           token: ${{ secrets.GH_TOKEN }}
         #
         #- run: flutter build ios --release --no-codesign
         #
         # Upload generated apk to the artifacts
-        uses: actions/upload-artifact@v2
-        with:
-          name: release-apk
-          path: |
-                build/app/outputs/apk/release/*.apk
-                build/app/outputs/bundle/release/*.aab"
+       - uses: actions/upload-artifact@v2
+         with:
+           name: release-apk
+           path: |
+                 build/app/outputs/apk/release/*.apk
+                 build/app/outputs/bundle/release/*.aab"
         
