--- a/.github/workflows/ftpConnect.yml
+++ b/.github/workflows/ftpConnect.yml
@@ -61,7 +61,7 @@ jobs:
       - name: Create a Release APK
         uses: ncipollo/release-action@v1.7.3
         with:
-          tag: v.test
+          tag: v1.2.3
           artifacts: "build/app/outputs/apk/release/*.apk,build/app/outputs/bundle/release/*.aab"
           commit: ${{ github.sha }}
           token: ${{ secrets.GH_TOKEN }}
