--- a/.github/workflows/ftpConnect.yml
+++ b/.github/workflows/ftpConnect.yml
@@ -62,7 +62,7 @@ jobs:
         uses: ncipollo/release-action@v1.7.3
         with:
           tag: v1.2.3
-          artifacts: /**/build/app/outputs/**/*.apk,/**/build/app/outputs/bundle/release/*.aab
+          artifacts: exemple/build/app/outputs/**/*.apk,exemple/build/app/outputs/bundle/release/*.aab
           commit: ${{ github.sha }}
           token: ${{ secrets.GH_TOKEN }}
         #
