--- a/.github/workflows/ftpConnect.yml
+++ b/.github/workflows/ftpConnect.yml
@@ -1,33 +1,22 @@
 name: build
 
-on:
-  push:
-    branches: [ master, dev ]
-    #tags:
-      #- '*'
-  pull_request:
-    branches: [ master, dev ]
+on: [push, pull_request]
 
 jobs:
   test:
     runs-on: ubuntu-latest
     name: test and send to codeCov
+    container:
+      image: google/dart:2.10.0
     steps:
       # The branch or tag ref that triggered the workflow will be checked out.
       # https://github.com/actions/checkout
       - uses: actions/checkout@v2
 
-      # Setup a flutter environment.
-      # https://github.com/marketplace/actions/flutter-action
-      - uses: subosito/flutter-action@v1
-        with:
-          flutter-version: '1.22.4'
-
-      - run: flutter pub get
-      - run: flutter format --dry-run --set-exit-if-changed .
-      - run: flutter analyze
+      - run: dartfmt --dry-run --set-exit-if-changed .
+      - run: dart analyze .
       # run  flutter widgets tests  and unit tests
-      - run: flutter test --coverage
+      - run: dart test --coverage=coverage && pub run coverage:format_coverage --lcov --in=coverage --out=coverage/lcov.info --packages=.packages --report-on=lib
         # Upload coverage reports to Codecov
         # https://github.com/marketplace/actions/codecov
       - name: Upload coverage to Codecov
@@ -37,42 +26,17 @@ jobs:
           file: coverage/lcov.info
 
   build_deploy:
+    #if conditional to prevent a job from running
+    if: github.event_name == 'pull_request' && startsWith(github.ref, 'refs/tags/v')
     runs-on: ubuntu-latest
-    name: build apks and deploy
+    name: deploy release
     steps:
       - uses: actions/checkout@v2
-      - uses: subosito/flutter-action@v1
-        with:
-          flutter-version: '1.22.4'
-
-      - name: set up JDK 1.8
-        uses: actions/setup-java@v1
-        with:
-          java-version: 1.8
-
-      - name: Install NDK
-        run: echo "y" | sudo ${ANDROID_HOME}/tools/bin/sdkmanager --install "ndk;20.0.5594570" --sdk_root=${ANDROID_SDK_ROOT}
-
-      - run: pushd example && flutter build apk --release --split-per-abi
-      - run: pushd example && flutter build appbundle
 
       # This action will create a github release and optionally upload an artifact to it.
       # https://github.com/ncipollo/release-action
-      - name: Create a Release APK
+      - name: Create a Release
         uses: ncipollo/release-action@v1
         with:
-          tag: v0.1.7
-          artifacts: example/build/app/outputs/**/*.apk,example/build/app/outputs/bundle/release/*.aab
           commit: ${{ github.sha }}
           token: ${{ secrets.GH_TOKEN }}
-        #
-        #- run: flutter build ios --release --no-codesign
-        #
-        # Upload generated apk to the artifacts
-      #- uses: actions/upload-artifact@v2
-       # with:
-          #name: release-apk
-         # path: |
-                #${{ github.workspace }}/**/build/app/outputs/**/*.apk
-              #  ${{ github.workspace }}/**/build/app/outputs/bundle/release/*.aab
-        
