add possibility to change from ascii to binary in file size request

--- a/.github/workflows/ftpConnect.yml
+++ b/.github/workflows/ftpConnect.yml
@@ -12,9 +12,11 @@ jobs:
       # The branch or tag ref that triggered the workflow will be checked out.
       # https://github.com/actions/checkout
       - uses: actions/checkout@v2
+      - name: Install Dependencies
+        run: pub get
 
       - run: dartfmt --dry-run --set-exit-if-changed .
-      - run: dart analyze .
+      - run: dartanalyzer --enable-experiment=non-nullable --fatal-infos --fatal-warnings lib test
       # run  flutter widgets tests  and unit tests
       - run: dart test --coverage=coverage && pub run coverage:format_coverage --lcov --in=coverage --out=coverage/lcov.info --packages=.packages --report-on=lib
         # Upload coverage reports to Codecov
