--- a/.github/workflows/ftpConnect.yml
+++ b/.github/workflows/ftpConnect.yml
@@ -18,7 +18,7 @@ jobs:
       - run: dartfmt --dry-run --set-exit-if-changed .
       - run: dartanalyzer --enable-experiment=non-nullable --fatal-infos --fatal-warnings lib test
       # run  flutter widgets tests  and unit tests
-      - run: dart test --coverage=coverage
+      - run: dart test --coverage=coverage && pub run coverage:format_coverage --lcov --in=coverage --out=coverage/lcov.info --packages=.packages --report-on=lib
         # Upload coverage reports to Codecov
         # https://github.com/marketplace/actions/codecov
       - name: Upload coverage to Codecov
