--- a/.gitignore
+++ b/.gitignore
@@ -29,6 +29,9 @@
 .pub-cache/
 .pub/
 build/
+coverage/
+lib/generated_plugin_registrant.dart
+pubspec.lock
 
 # Android related
 **/android/**/gradle-wrapper.jar
