--- a/.github/workflows/ftpConnect.yml
+++ b/.github/workflows/ftpConnect.yml
@@ -19,6 +19,10 @@ jobs:
       - run: dartanalyzer --enable-experiment=non-nullable --fatal-infos --fatal-warnings lib test
       # run  flutter widgets tests  and unit tests
       - run: dart test --coverage=coverage && pub run coverage:format_coverage --lcov --in=coverage --out=coverage/lcov.info --packages=.packages --report-on=lib
+      - name: Check Code Coverage
+        uses: VeryGoodOpenSource/very_good_coverage@v1.1.1
+          with:
+            path: packages/bloc/coverage/lcov.info
         # Upload coverage reports to Codecov
         # https://github.com/marketplace/actions/codecov
       - name: Upload coverage to Codecov
