--- a/.gitignore
+++ b/.gitignore
@@ -84,3 +84,4 @@ test/testUnZip/
 !**/ios/**/default.pbxuser
 !**/ios/**/default.perspectivev3
 !/packages/flutter_tools/test/data/dart_dependencies_test/**/.packages
+/test/testResFilestestZip.zip
