--- a/.github/workflows/ftpConnect.yml
+++ b/.github/workflows/ftpConnect.yml
@@ -13,12 +13,12 @@ jobs:
       # https://github.com/actions/checkout
       - uses: actions/checkout@v2
       - name: Install Dependencies
-        run: dart pub get
+        run:  pub get
 
       - run: dartfmt --dry-run --set-exit-if-changed .
       - run: dartanalyzer .
       # run  flutter widgets tests  and unit tests
-      - run: dart test --coverage=coverage && pub run coverage:format_coverage --lcov --in=coverage --out=coverage/lcov.info --packages=.packages --report-on=lib
+      - run: pub run test --coverage=coverage && pub run coverage:format_coverage --lcov --in=coverage --out=coverage/lcov.info --packages=.packages --report-on=lib
         # Upload coverage reports to Codecov
         # https://github.com/marketplace/actions/codecov
       - name: Upload coverage to Codecov
