--- a/.github/workflows/ftpConnect.yml
+++ b/.github/workflows/ftpConnect.yml
@@ -4,7 +4,7 @@ on: [push, pull_request]
 
 jobs:
   test:
-    runs-on: ubuntu-18.04
+    runs-on: ubuntu-latest
     name: test and send to codeCov
     container:
       image: google/dart:2.12.0
